# ckanext-toolbelt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  cliff.toml  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  cliff.toml  cypress.config.ts  gulpfile.js  mkdocs.yml  package.json  pyproject.toml  setup.cfg  test.ini  tsconfig.json
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/.github/workflows/: release.yml  test.yml
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/: cli.py  config.py  config_declaration.yaml  helpers.py  plugin.py  views.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/assets/: webassets.yml
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/assets/scripts/: {{ cookiecutter.project_shortname }}-datepicker.js  {{ cookiecutter.project_shortname }}-izi-modal.js  {{ cookiecutter.project_shortname }}-izi-toast.js  {{ cookiecutter.project_shortname }}-scrollbar.js  {{ cookiecutter.project_shortname }}-slick.js  {{ cookiecutter.project_shortname }}-sortable.js  {{ cookiecutter.project_shortname }}-swal.js  {{ cookiecutter.project_shortname }}-tom-select.js  {{ cookiecutter.project_shortname }}.js
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/assets/scss/: _cssvars.scss  _fonts.scss  _footer.scss  _global.scss  _header.scss  _vendor.scss  {{ cookiecutter.project_shortname }}.scss
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/logic/: action.py  auth.py  schema.py  validators.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/migration/{{ cookiecutter.project_shortname }}/: alembic.ini  env.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/model/: __init__.py  something.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/schemas/: dataset.yaml  group.yaml  presets.yaml
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/templates/: page.html
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/templates/{{ cookiecutter.project_shortname }}/: complex.html
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/tests/: conftest.py  test_cli.py  test_config.py  test_helpers.py  test_plugin.py  test_views.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/tests/benchmarks/: test_speed.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/tests/e2e/: conftest.py  test_home.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/tests/implementations/: test_package_controller.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/ckanext/{{ cookiecutter.project_shortname }}/tests/logic/: test_action.py  test_auth.py  test_schema.py  test_validators.py
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/config/: project.ini
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/cypress/e2e/: sandbox.cy.ts  swal.cy.ts
ckanext/toolbelt/cli/cookiecutter/extended/{{ cookiecutter.project }}/test_config/: default.ini  project.ini  test.ini
ckanext/toolbelt/cli/copier/extended/{{project}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  gulpfile.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  test.ini  tsconfig.json
ckanext/toolbelt/cli/copier/extended/{{project}}/.github/workflows/: test.yml
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/: cli.py  config.py  config_declaration.yaml  helpers.py  plugin.py  views.py
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/assets/: webassets.yml
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/assets/scripts/: {{ project_shortname }}-sortable.js  (+8 more)
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/implementations/: __init__.py  package_controller.py
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/logic/: action.py  auth.py  schema.py  validators.py
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/model/: something.py
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/schemas/: organization.yaml  presets.yaml
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/templates/: page.html
ckanext/toolbelt/cli/copier/extended/{{project}}/ckanext/{{project_shortname}}/tests/: conftest.py  test_cli.py  test_config.py  test_helpers.py  test_plugin.py  test_views.py
ckanext/toolbelt/cli/copier/extended/{{project}}/config/: project.ini
ckanext/toolbelt/cli/copier/extended/{{project}}/config/saml/: settings.json
ckanext/toolbelt/cli/copier/extended/{{project}}/config/saml/attributemaps/: mapper.py
ckanext/toolbelt/cli/copier/extended/{{project}}/config/solr/: schema.xml
ckanext/toolbelt/cli/copier/extended/{{project}}/cypress/e2e/: sandbox.cy.ts  swal.cy.ts
ckanext/toolbelt/cli/copier/extended/{{project}}/cypress/fixtures/: users.json
ckanext/toolbelt/cli/copier/extended/{{project}}/cypress/support/: commands.ts
(+125 files in other folders)
