[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-toolbelt"
description = ""
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14",]
keywords = [ "CKAN",]
requires-python = ">= 3.8"
dependencies = [ "click", "aiosmtpd", "typing_extensions", "gitpython", "cookiecutter"]
dynamic = [ "version",]
authors = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
    {name = "Sergey Motornyuk", email = "sergey.motornyuk@linkdigital.com.au"},
]
maintainers = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "AGPL"

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-toolbelt"

[project.optional-dependencies]
flask-sqlalchemy = [ "flask-sqlalchemy~=2.5",]
test = [ "pytest-ckan", "pytest-mock",]

[project.scripts]
ctb = "ckanext.toolbelt.cli:toolbelt"

[project.entry-points."ckan.plugins"]
toolbelt = "ckanext.toolbelt.plugins:ToolbeltPlugin"
toolbelt_safe_upload = "ckanext.toolbelt.plugins.safe_upload:SafeUploadPlugin"
toolbelt_group_changes = "ckanext.toolbelt.plugins.group_changes:GroupChangesPlugin"
toolbelt_composite_groups = "ckanext.toolbelt.plugins.group_composite:CompositeGroupsPlugin"
toolbelt_composite_organizations = "ckanext.toolbelt.plugins.group_composite:CompositeOrganizationsPlugin"
toolbelt_cascade_organization_updates = "ckanext.toolbelt.plugins.cascade_organization_updates:CascadeOrganizationUpdatesPlugin"
toolbelt_fdt_sqlalchemy = "ckanext.toolbelt.plugins.fdt_sqlalchemy:FdtSqlalchemyPlugin"

[project.entry-points."ckan.system_plugins"]
toolbelt_fdt_scroll = "ckanext.toolbelt.plugins.fdt_scroll.plugin:FdtScrollPlugin"

[project.entry-points."ckan.click_command"]
toolbelt = "ckanext.toolbelt.cli.ckan:toolbelt"

[project.entry-points.pytest11]
toolbelt = "pytest_toolbelt.plugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic.version]
attr = "ckanext.toolbelt.__version__"

[tool.black]
# line-length = 88
# preview = true

[tool.ruff]
target-version = "py38"
select = [
       "B",  # likely bugs and design problems
       "BLE",  # do not catch blind exception
       "C40",  # better list/set/dict comprehensions
       "C90",  # check McCabe complexity
       "COM",  # trailing commas
       "E",  # pycodestyle error
       "W",  # pycodestyle warning
       "F",  # pyflakes
       "G",  # format strings for logging statements
       "N",  # naming conventions
       "PL",  # pylint
       "PT",  # pytest style
       "PIE",  # misc lints
       "Q",  # preferred quoting style
       "RET",  # improvements for return statements
       "RSE",  # improvements for rise statements
       "S",  # security testing
       "SIM",  # simplify code
       "T10",  # debugging statements
       "T20",  # print statements
       "TID",  # tidier imports
       "TCH",
       "TRY",  # better exceptions
       "UP",  # upgrade syntax for newer versions of the language
]
ignore = [
       "E712", # comparison to bool: violated by SQLAlchemy filters
       "PT004", # fixture does not return anything, add leading underscore: violated by clean_db
       "PLC1901", # simplify comparison to empty string: violated by SQLAlchemy filters
]

[tool.ruff.per-file-ignores]
"ckanext/toolbelt/tests*" = [
                         "S",  # security testing
                         "PLR2004", # magic value used in comparison
                         "PT004",
]
"ckanext/toolbelt/plugins/group_composite.py" = ["C901", "PLR0912", "PLR0915", "SIM105"]
"ckanext/toolbelt/utils/fs.py" = ["PLR0911"]
"pytest_toolbelt/plugin.py" = ["PT004", "S101", "PT003"]
"ckanext/toolbelt/magic/__init__.py" = ["F821"]
[tool.isort]
known_ckan = "ckan"
known_ckanext = "ckanext"
known_self = "ckanext.toolbelt"
sections = "FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,CKAN,CKANEXT,SELF,LOCALFOLDER"
profile = "black"

[tool.pytest.ini_options]
addopts = "--ckan-ini test.ini"
filterwarnings = [
               # "ignore::DeprecationWarning",
]
testpaths = "ckanext/toolbelt/tests"

[tool.pyright]
pythonVersion = "3.8"
include = ["ckanext"]
exclude = [
    "**/test*",
    "**/migration",
]
strict = []

strictParameterNoneValue = true

# Check the meaning of rules here
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportFunctionMemberAccess = true # non-standard member accesses for functions
reportMissingImports = true
reportMissingModuleSource = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false # Context won't work with this rule
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportUntypedFunctionDecorator = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnknownVariableType = true
reportUntypedBaseClass = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportUnusedCallResult = false # allow function calls for side-effect only
useLibraryCodeForTypes = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportUntypedClassDecorator = false
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportPrivateImportUsage = true
reportInconsistentConstructor = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportMissingParameterType = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"
version_files = ["setup.cfg:version", "setup.py:version"]
major_version_zero = true
changelog_incremental = true
