[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-toolbelt"
version = "0.6.6"

description = ""
classifiers = [ ]
keywords = [ "CKAN",]
requires-python = ">= 3.8"
dependencies = [ "click", "aiosmtpd", "typing_extensions", "gitpython", "cookiecutter"]
authors = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
    {name = "Sergey Motornyuk", email = "sergey.motornyuk@linkdigital.com.au"},
]
maintainers = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
]
[project.license]
text = "AGPL"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-toolbelt"

[project.optional-dependencies]
flask-sqlalchemy = [ "flask-sqlalchemy~=2.5",]
test = [ "pytest-ckan", "pytest-mock",]

[project.scripts]
ctb = "ckanext.toolbelt.cli:toolbelt"

[project.entry-points."ckan.plugins"]
toolbelt = "ckanext.toolbelt.plugins:ToolbeltPlugin"
toolbelt_safe_upload = "ckanext.toolbelt.plugins.safe_upload:SafeUploadPlugin"
toolbelt_group_changes = "ckanext.toolbelt.plugins.group_changes:GroupChangesPlugin"
toolbelt_composite_groups = "ckanext.toolbelt.plugins.group_composite:CompositeGroupsPlugin"
toolbelt_composite_organizations = "ckanext.toolbelt.plugins.group_composite:CompositeOrganizationsPlugin"
toolbelt_cascade_organization_updates = "ckanext.toolbelt.plugins.cascade_organization_updates:CascadeOrganizationUpdatesPlugin"
toolbelt_fdt_sqlalchemy = "ckanext.toolbelt.plugins.fdt_sqlalchemy:FdtSqlalchemyPlugin"

[project.entry-points."ckan.system_plugins"]
toolbelt_fdt_scroll = "ckanext.toolbelt.plugins.fdt_scroll.plugin:FdtScrollPlugin"

[project.entry-points."ckan.click_command"]
toolbelt = "ckanext.toolbelt.cli.ckan:toolbelt"

[project.entry-points.pytest11]
toolbelt = "pytest_toolbelt.plugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic.version]
attr = "ckanext.toolbelt.__version__"

[tool.ruff]
target-version = "py38"
exclude = ["ckanext/toolbelt/cli/cookiecutter"]

[tool.ruff.lint]
select = [
       "ANN0", # type annotations for function arguments
       "B",  # likely bugs and design problems
       "BLE",  # do not catch blind exception
       "C4",  # better list/set/dict comprehensions
       "C90",  # check McCabe complexity
       # "DTZ", # enforce timezone in date objects
       "E",  # pycodestyle error
       "W",  # pycodestyle warning
       "F",  # pyflakes
       "FA", # verify annotations from future
       "G",  # format strings for logging statements
       "N",  # naming conventions
       "I",  # isort
       "ICN", # import conventions
       # "D1",  # require doc
       "D2",  # doc formatting
       "D4",  # doc convention
       "PL",  # pylint
       "PT",  # pytest style
       "PERF", # performance anti-patterns
       # "PTH", # replace os.path with pathlib
       "PIE",  # misc lints
       "RET",  # improvements for return statements
       "RSE",  # improvements for rise statements
       "S",  # security testing
       "SIM",  # simplify code
       "T10",  # debugging statements
       "T20",  # print statements
       "TID",  # tidier imports
       "TRY",  # better exceptions
       "UP",  # upgrade syntax for newer versions of the language
]
ignore = [
       "E712", # comparison to bool: violated by SQLAlchemy filters
       "PT004", # fixture does not return anything, add leading underscore: violated by clean_db
       "PLC1901", # simplify comparison to empty string: violated by SQLAlchemy filters
       "RET503", # don't enforce return-None
]

[tool.ruff.lint.per-file-ignores]
"ckanext/toolbelt/tests*" = ["S","PLR", "ANN"]
"ckanext/toolbelt/plugins/group_composite.py" = ["C901", "PLR0912", "PLR0915", "SIM105"]
"ckanext/toolbelt/utils/fs.py" = ["PLR0911"]
"pytest_toolbelt/plugin.py" = ["PT004", "S101", "PT003"]
"ckanext/toolbelt/magic/__init__.py" = ["F821"]

[tool.ruff.lint.flake8-import-conventions.aliases]
"ckan.plugins" = "p"
"ckan.plugins.toolkit" = "tk"
sqlalchemy = "sa"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
              "future",
              "standard-library",
              "first-party",
              "third-party",
              "ckan",
              "ckanext",
              "self",
              "local-folder",
]

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
ckan = ["ckan"]
ckanext = ["ckanext"]
self = ["ckanext.toolbelt"]

[tool.pytest.ini_options]
addopts = "--ckan-ini test.ini"
filterwarnings = [
               # "ignore::DeprecationWarning",
]
testpaths = "ckanext/toolbelt/tests"

[tool.git-changelog]
output = "CHANGELOG.md"
convention = "conventional"
parse-trailers = true

[tool.pyright]
pythonVersion = "3.8"
include = ["ckanext"]
exclude = [
    "**/test*",
    "**/migration",
]
strict = []

strictParameterNoneValue = true

# Check the meaning of rules here
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportFunctionMemberAccess = true # non-standard member accesses for functions
reportMissingImports = true
reportMissingModuleSource = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false # Context won't work with this rule
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportUntypedFunctionDecorator = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnknownVariableType = true
reportUntypedBaseClass = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportUnusedCallResult = false # allow function calls for side-effect only
useLibraryCodeForTypes = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportUntypedClassDecorator = false
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportPrivateImportUsage = true
reportInconsistentConstructor = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportMissingParameterType = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"
version_files = ["setup.cfg:version", "setup.py:version"]
major_version_zero = true
changelog_incremental = true
