[metadata]
name = ckanext-toolbelt
version = 0.3.7
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-toolbelt
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
	 CKAN

[options]
python_requires = >= 3.7
install_requires =
		 click
                 aiosmtpd
		 typing_extensions
packages = find:
namespace_packages = ckanext
include_package_data = True

[options.extras_require]

[options.entry_points]
ckan.plugins =
	     toolbelt = ckanext.toolbelt.plugins:ToolbeltPlugin

	     toolbelt_safe_upload = ckanext.toolbelt.plugins.safe_upload:SafeUploadPlugin

	     toolbelt_group_changes = ckanext.toolbelt.plugins.group_changes:GroupChangesPlugin

	     toolbelt_composite_groups = ckanext.toolbelt.plugins.group_composite:CompositeGroupsPlugin
	     toolbelt_composite_organizations = ckanext.toolbelt.plugins.group_composite:CompositeOrganizationsPlugin

             toolbelt_cascade_organization_updates = ckanext.toolbelt.plugins.cascade_organization_updates:CascadeOrganizationUpdatesPlugin

             toolbelt_fdt_sqlalchemy = ckanext.toolbelt.plugins.fdt_sqlalchemy:FdtSqlalchemyPlugin

ckan.system_plugins =
             toolbelt_fdt_scroll = ckanext.toolbelt.plugins.fdt_scroll.plugin:FdtScrollPlugin

ckan.click_command =
		   toolbelt = ckanext.toolbelt.cli.ckan:toolbelt

console_scripts =
		ctb = ckanext.toolbelt.cli:toolbelt

babel.extractors =
		 ckan = ckan.lib.extract:extract_ckan


[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/toolbelt/i18n/ckanext-toolbelt.pot
width = 80

[init_catalog]
domain = ckanext-toolbelt
input_file = ckanext/toolbelt/i18n/ckanext-toolbelt.pot
output_dir = ckanext/toolbelt/i18n

[update_catalog]
domain = ckanext-toolbelt
input_file = ckanext/toolbelt/i18n/ckanext-toolbelt.pot
output_dir = ckanext/toolbelt/i18n
previous = true

[compile_catalog]
domain = ckanext-toolbelt
directory = ckanext/toolbelt/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

addopts = --ckan-ini test.ini
testpaths = ckanext/toolbelt/tests
