[metadata]
name = {{ project }}
version = 0.0.1
description = {{ description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ github_user_name }}/{{ project }}
author = {{ author }}
author_email = {{ author_email }}
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11
            Programming Language :: Python :: 3.12
            Programming Language :: Python :: 3.13
keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
include_package_data = True
install_requires =
                 typing_extensions

[options.entry_points]
ckan.plugins =
             {{ project_shortname }} = ckanext.{{ project_shortname }}.plugin:{{ plugin_class_name }}

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
test =
     pytest-ckan
     pytest-benchmark
     pytest-pretty

docs =
     mkdocs
     mkdocs-material
     pymdown-extensions
     mkdocstrings[python]

dev =
    %(test)s
    %(docs)s
    pre-commit

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/{{ project_shortname }}/i18n/ckanext-{{ project_shortname }}.pot
width = 80

[init_catalog]
domain = ckanext-{{ project_shortname }}
input_file = ckanext/{{ project_shortname }}/i18n/ckanext-{{ project_shortname }}.pot
output_dir = ckanext/{{ project_shortname }}/i18n

[update_catalog]
domain = ckanext-{{ project_shortname }}
input_file = ckanext/{{ project_shortname }}/i18n/ckanext-{{ project_shortname }}.pot
output_dir = ckanext/{{ project_shortname }}/i18n
previous = true

[compile_catalog]
domain = ckanext-{{ project_shortname }}
directory = ckanext/{{ project_shortname }}/i18n
statistics = true
